# dataclassio

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
benchmarks/: coco_bench.py  coco_model.py  compare_to_dict.py  compare_with_other_libraries.py
src/dataclass_io/: _example_schemas.py  _test_schema.py  functional.py  io_mixin.py
src/dataclass_io/functional/: common.py  from_dict.py  to_dict.py
src/dataclassio/: __init__.py  _example_schemas.py  config.py  io_mixin.py  sentinels.py  types.py
src/dataclassio/core/: __init__.py  common.py  expression_builder.py  lines.py
src/dataclassio/functional/: __init__.py  _shared.py  common.py  from_dict.py  to_dict.py
tests/: _example_schemas.py  test_basic_literals.py  test_config_propagation.py  test_datetimes.py  test_enums.py  test_extra_fields.py  test_field_ordering.py  test_init_fields.py  test_json.py  test_nested_dataclasses.py  test_recursion.py  test_simple_nested_dataclasses.py  test_unions.py
