[project]
name = "dataclass-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chase", email = "chasehill70@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typing-extensions~=4.15",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "rich>=14.1.0",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
    "--verbosity=1"
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]