[project]
name = "dataclassio"
version = "0.1.0"
description = "A lightweight package for converting dataclass hierarchies to and from dictionaries."
readme = "README.md"
authors = [
    { name = "Charles Hill", email = "chasehill70@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typing-extensions~=4.15",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/charlesjhill/dataclassio"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "rich>=14.1.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=dataclassio",
    "--cov-report=term-missing",
    "--durations=10",
    "--verbosity=1"
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
